# MJPEGWriter

./: CMakeLists.txt  MJPEGWriter.cpp  MJPEGWriter.h  README.md  main.cpp
